--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "typescript-to-lua": "file:typescript-to-lua-for-5.0-58ebd67271eed931e8bdc35dcd6ba4e06861a70c.tgz"
   },
   "devDependencies": {
-    "prettier": "^2.6.2"
+    "@types/jest": "^27.5.1",
+    "jest": "^28.1.0",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3"
   }
 }
