--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "lib": ["esnext"],
         "moduleResolution": "node",
         "strict": true,
-        "types": ["lua-types/5.0"]
+        "types": ["lua-types/5.0", "jest"]
     },
     "include": ["src"]
 }
