--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "gulp-flatmap": "^1.0.2",
     "gulp-intermediate": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "lua-types": "file:vendor/typescript-to-lua-types-for-5.0-28e86821705a2f175dfbf908aed3b45cd7875777.tgz",
+    "lua-types": "^2.12.0",
     "npx": "^10.2.2",
     "typescript": "^4.7.4",
-    "typescript-to-lua": "file:vendor/typescript-to-lua-for-5.0-b7550eb9dba206cbbad0ac33948e53f2b56f55b7.tgz"
+    "typescript-to-lua": "file:vendor/typescript-to-lua-for-5.0-892b2cf364436c0a5c8dad9274b84f8888739de3.tgz"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
