--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-flatmap": "^1.0.2",
     "gulp-intermediate": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "lua-types": "^2.12.0",
+    "lua-types": "file:vendor/lua-types-for-5.0-484810c4fbc0c71b21216e8bf2cec857403e10a8.tgz",
     "npx": "^10.2.2",
     "typescript": "^4.7.4",
     "typescript-to-lua": "file:vendor/typescript-to-lua-for-5.0-7d90ef7e2258a9a713c13552b112318be0daab8b.tgz"
