feat: separate prettier script into check and write tasks

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "lint": "prettier --write .",
+    "lint": "prettier --check .",
+    "fix:prettier": "prettier --write .",
     "watch": "gulp",
     "build": "gulp all"
   },
