--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "gulp-flatmap": "^1.0.2",
     "gulp-intermediate": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "lua-types": "file:vendor/lua-types-for-5.0-484810c4fbc0c71b21216e8bf2cec857403e10a8.tgz",
+    "lua-types": "^2.13.0",
     "npx": "^10.2.2",
     "typescript": "^4.7.4",
-    "typescript-to-lua": "file:vendor/typescript-to-lua-for-5.0-7d90ef7e2258a9a713c13552b112318be0daab8b.tgz"
+    "typescript-to-lua": "^1.10.0"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
