--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,16 @@
 {
     "name": "TypeScriptToLua",
-    "build": {
-        "dockerfile": "Dockerfile"
+    "image": "mcr.microsoft.com/devcontainers/javascript-node:18",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "typescript-to-lua.vscode-typescript-to-lua",
+                "dbaeumer.vscode-eslint",
+                "editorconfig.editorconfig",
+                "esbenp.prettier-vscode"
+            ]
+        }
     },
-    "extensions": [
-        "typescript-to-lua.vscode-typescript-to-lua",
-        "dbaeumer.vscode-eslint",
-        "editorconfig.editorconfig",
-        "esbenp.prettier-vscode"
-    ],
     "postCreateCommand": "npm ci",
     "remoteUser": "node"
 }
