--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext"
     },
-    "include": ["build.ts"]
+    "include": ["build.ts", "build-worker.ts"]
 }
