build: upgrade to node 20, the new lts

--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
     "lint": "prettier --check .",
     "fix:prettier": "prettier --write .",
     "test": "jest",
-    "watch": "ts-node-esm ./build.ts watch",
-    "build": "ts-node-esm ./build.ts build"
+    "watch": "tsc && node ./build.js watch",
+    "build": "tsc && node ./build.js build"
   },
   "dependencies": {
     "@colors/colors": "^1.6.0",
     "glob": "^10.2.1",
     "lua-types": "^2.13.1",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "typescript-to-lua": "^1.14.0"
   },
